# agent-tool-safety-lab

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design_notes.md  experiment_log_2026_05.md  experiment_notes.md  limitations.md  sample_eval_report.md
examples/: run_local_eval.py
src/agent_tool_safety_lab/: __init__.py  cli.py  config.py  environment.py  evaluator.py  models.py  policies.py  tools.py
src/agent_tool_safety_lab/agents/: base.py  llm_agent.py  mock_agent.py
src/agent_tool_safety_lab/datasets/: scenarios.yaml  synthetic_records.yaml
src/agent_tool_safety_lab/reports/: __init__.py  report_writer.py
tests/: test_config.py  test_evaluator.py  test_policies.py  test_scenarios.py  test_tools.py
